# burp-rust

./: .gitmodules  Cargo.toml  diagram.json  wokwi.toml
.devcontainer/: devcontainer.json
burp-rust/: Cargo.toml
burp-rust-app/: .gitignore  Cargo.toml
burp-rust-app/.cargo/: config.toml
burp-rust-app/docs/: README.md
burp-rust-app/src/: async_wifi_wrapper.rs  esp_mdns_wrapper.rs  esp_nvs_wrapper.rs  lib.rs  main.rs
burp-rust-lib/: Cargo.toml
burp-rust-lib/src/: config.rs  debug.rs  lib.rs  mocks.rs  name.rs  network.rs  storage.rs  traits.rs
burp-rust-lib/src/config/: blob_config.rs  name_config.rs  read_write.rs
burp-rust-lib/src/debug/: debug_blob.rs
burp-rust-lib/src/mocks/: config_error.rs  mock_esp_nvs.rs  mock_storage.rs
burp-rust-lib/src/traits/: mdns.rs  read_write.rs  storage.rs  wifi.rs
burp-rust/docs/: README.md
burp-rust/src/: main.rs
scripts/: flash.sh
