[package]
name = "burp-rust-app"
version = "0.1.0"
authors = ["Peter Halliday <pghalliday@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false, features = ["edge-executor"] }
esp-idf-svc = { version = "0.46", optional = true, default-features = false, features = ["embassy-time-isr-queue"] }
embedded-svc = { version = "0.25", optional = true, default-features = false }
burp-rust-lib = { path = "../burp-rust-lib" }
edge-executor = "0.3.1"
embassy-time = "0.1.3"
heapless = "0.7.16"
toml-cfg = "0.1.3"
async-trait = "0.1.73"

[build-dependencies]
embuild = "0.31.2"

# Workaround to add mdns protocol back from submodule
# hopefully this will be replaced soon with a method that
# does not require cloning the esp-protocols repo
#
# This will probably be the correct way to do this once the changes
# from https://github.com/esp-rs/esp-idf-sys/pull/222 have been released
#
#[[package.metadata.esp-idf-sys.extra_components]]
#remote_component = { name = "espressif/mdns", version = "1.2" }
#
[package.metadata.esp-idf-sys]
extra_components = [
    { component_dirs = [ "esp-protocols/components/mdns" ] }
]

