[package]
name = "burp-rust-lib"
version = "0.1.0"
authors = ["Peter Halliday <pghalliday@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-svc = "0.25.3"
log = "0.4.20"
heapless = { version = "0.7.16", features = ["x86-sync-pool"] }
thiserror = "1.0.47"

[dev-dependencies]
