[package]
name = "burp-rust-lib"
version = "0.1.0"
authors = ["Peter Halliday <pghalliday@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-svc = { version = "0.25.3", default-features = false }
log = { version = "0.4.20", default-features = false }
heapless = { version = "0.7.16", default-features = false }
thiserror = { version = "1.0.47", default-features = false }
const-hex = { version = "1.8.0", default-features = false }

[dev-dependencies]
